--- a/config/database.yml
+++ b/config/database.yml
@@ -20,10 +20,16 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  database: <%= ENV['DB_NAME'] || "botchain-api_#{Rails.env}" %>
+  host: <%= ENV['DB_HOST'] || 'localhost' %>
+  port: <%= ENV['DB_PORT'] || '5432' %>
+  username: <%= ENV['DB_USER'] || ENV['USER'] || 'postgres' %>
+  <% if ENV['DB_PASS'] %>
+  password: <%= ENV['DB_PASS'] %>
+  <% end %>
 
 development:
   <<: *default
-  database: botchain-api_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -57,7 +63,6 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: botchain-api_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -80,6 +85,3 @@ test:
 #
 production:
   <<: *default
-  database: botchain-api_production
-  username: botchain-api
-  password: <%= ENV['BOTCHAIN-API_DATABASE_PASSWORD'] %>
