--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,8 +18,6 @@ jobs:
       - run: echo 'export MOUNTS="-v /var/run/docker.sock:/var/run/docker.sock -v $PWD:/app"' >> $BASH_ENV
       - run: echo 'export DOCKER_OPTS="-e AWS_ACCESS_KEY_ID -e AWS_SECRET_ACCESS_KEY -e AWS_DEFAULT_REGION $MOUNTS"' >> $BASH_ENV
 
-      - run: env
-
       # run tests!
       - run:
           name: run tests
@@ -35,5 +33,6 @@ jobs:
                   -a $AWS_ACCOUNT \
                   -c $NAME_PREFIX$ECS_CLUSTER \
                   -d $ENV-deployer \
+                  -v ${CIRCLE_SHA1::7} \
                   $NAME_PREFIX$SERVICE_NAME
             fi
